Fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,8 @@ body {
   padding: 0;
   width: 100%;
   background-color: #e7e7e7;
+  background-image: url("../img/icons-bg.png");
+  background-repeat: repeat;
   
 }
 
@@ -85,7 +87,7 @@ a {
 
 .about-card-content-wide {
   width: 90%;
-  padding: 5% 0;
+  padding: 8% 0;
   margin: 0 auto;
 }
 
@@ -96,6 +98,7 @@ a {
 .three-cols-container {
   display: flex;
   flex-wrap: wrap;
+  padding: 0 0 8% 0;
 }
 
 .three-cols-feature {
@@ -104,6 +107,7 @@ a {
 
 .three-cols-layout {
   width: calc((100% - 20px) / 3);
+  padding: 10px;
   margin-right: 10px;
 }
 
@@ -171,7 +175,6 @@ strong {
 
 .about-content h2 {
   text-align: center;
-  margin-top: 5%;
   color: #ff900d;
 }
 
@@ -191,7 +194,6 @@ strong {
 }
 
 .about-nav ul li {
-  padding: 10px;
   display: inline-block;
   cursor: pointer;
   width: calc(100% / 3);
@@ -207,6 +209,8 @@ strong {
 }
 
 .about-nav ul li a {
+  display: block;
+  padding: 10px;
   text-decoration: none;
 }
 
